--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
 
 
     <!--<script src="https://cdn.cocreate.app/validation/latest/CoCreate-validation.min.js"></script>-->
-    <script src="../../../CoCreateJS/dist/CoCreate.js"></script>
+    <script src="https://cdn.cocreate.app/latest/CoCreate.min.js"></script>
 
   </body>
 
