--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,6 @@
 
     <body>
         <!--<script src="https://cdn.cocreate.app/validation/latest/CoCreate-validation.min.js"></script>-->
-        <script src="https://cdn.cocreate.app/latest/CoCreate.min.js"></script>
+        <script src="/dist/CoCreate.js"></script>
     </body>
 </html>
